<?xml version="1.0" encoding="UTF-8"?>
<!--
 * Copyright 2010 Kurtis Nusbaum
 *
 * This file is part of LinkSchedule.  
 *
 * LinkSchedule is free software: you can 
 * redistribute it and/or modify it under the terms of the GNU General Public 
 * License as published by the Free Software Foundation, either version 2 of the 
 * License, or (at your option) any later version.  
 *
 * LinkSchedule is distributed in the hope that it will be useful, but WITHOUT 
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License 
 * for more details.  You should have received a copy of the GNU  General 
 * Public License along with LinkSchedule. If not, see 
 * http://www.gnu.org/licenses/.
 --> 

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuAbout"
					android:icon="@android:drawable/ic_menu_help"
          android:title="@string/about" />
    <item android:id="@+id/menuLinkWebsite"
					android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/website" />
    <item android:id="@+id/menuSettings"
					android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/settings" />
    <item android:id="@+id/menuDonate"
          android:title="@string/donate" />
</menu>
