<?xml version="1.0" encoding="UTF-8"?>
<!--
 * Copyright 2010 Kurtis Nusbaum
 *
 * This file is part of LinkSchedule.  
 *
 * LinkSchedule is free software: you can 
 * redistribute it and/or modify it under the terms of the GNU General Public 
 * License as published by the Free Software Foundation, either version 2 of the 
 * License, or (at your option) any later version.  
 *
 * LinkSchedule is distributed in the hope that it will be useful, but WITHOUT 
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License 
 * for more details.  You should have received a copy of the GNU  General 
 * Public License along with LinkSchedule. If not, see 
 * http://www.gnu.org/licenses/.
 --> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
	<RadioGroup
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_weight="10"
	>
		<RadioButton
			android:id="@+id/flynntown_radio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/flynntown_name"
		/>
		<RadioButton
			android:id="@+id/gorecki_radio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/gorecki_name"
		/>
		<RadioButton
			android:id="@+id/hcc_radio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/hcc_name"
		/>
		<RadioButton
			android:id="@+id/sexton_radio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/sexton_name"
		/>
	</RadioGroup>	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
	>
		<Button
			android:id="@+id/configureOkButton"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@android:string/ok"
		/>
	</LinearLayout>
</LinearLayout>

